# Sito_Gpoi

./: README.md
classeviva_probe/: .cvprobe.sqlite3  .env  README.md  pyproject.toml  schema.sql
classeviva_probe/.venv_311/: pyvenv.cfg
classeviva_probe/scripts/: demo_commands.sh
classeviva_probe/src/classeviva_probe/: ai_client.py  cli.py  coach.py  core.py  gui.py  presentation.py  storage.py  web.py
classeviva_probe/src/classeviva_probe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
classeviva_probe/src/classeviva_probe/web_static/: app.css  app.js  index.html
